[tool.poetry]
name = "pocket_ic"
version = "1.0.0"
description = "A canister testing library"
authors = [
    "The Internet Computer Project Developers <dept-testing_&_verification@dfinity.org>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dfinity/pocketic-py/"
include = ["tests", "examples"]

[tool.poetry.dependencies]
python = "^3.10"
ic-py = "^1.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
